# ScriptX

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README-zh.md  README.md
.devtools/: new_backend.sh
.devtools/hooks/: pre-commit
.github/workflows/: build.yml  coverage.yml  sync_to_tencent_code.yml  unit_tests.yml
backend/JavaScriptCore/: CMakeLists.txt  JscEngine-Native.cc  JscEngine.cc  JscEngine.h  JscEngine.hpp  JscLocalReference.cc  JscNative.cc  JscNative.hpp  JscValue.cc
backend/Lua/: CMakeLists.txt  LuaByteBufferImpl.cc  LuaEngine-Native.cc  LuaEngine.cc  LuaEngine.h  LuaEngine.hpp  LuaHelper.cc  LuaLocalReference.cc  LuaNative.cc  LuaNative.hpp  LuaScope.cc
backend/Python/: CMakeLists.txt  PyEngine.cc  PyEngine.h  PyException.cc  PyHelper.cc  PyHelper.h  PyHelper.hpp  PyInternalHelper.c  PyInternalHelper.cc  PyInternalHelper.h  PyLocalReference.cc  PyNative.cc  PyNative.hpp  PyReference.hpp  PyRuntimeSettings.cc  PyRuntimeSettings.h  PyScope.cc  PyScope.h  PyUtils.cc  PyValue.cc
backend/QuickJs/: CMakeLists.txt  QjsEngine.cc  QjsEngine.h  QjsEngine.hpp  QjsException.cc  QjsHelper.cc  QjsHelper.h  QjsHelper.hpp  QjsLocalReference.cc  QjsNative.cc  QjsNative.hpp  QjsReference.hpp  QjsScope.cc  QjsValue.cc
backend/Template/: TemplateEngine.h  TemplateLocalReference.cc  TemplateNative.cc  TemplateNative.hpp
backend/V8/: CMakeLists.txt  V8Engine.cc  V8Engine.h  V8Engine.hpp  V8Helper.cc  V8Helper.h  V8Helper.hpp  (+7 more)
src/: Engine.cc  Engine.h  Engine.hpp  Native.cc  Native.h  Native.hpp  NativeConverter.hpp  Reference.cc  Reference.h  Scope.cc  Scope.h  Utils.cc  Value.h  foundation.h  types.h  version.h
test/: CMakeLists.txt
test/cmake/benchmark/: CMakeLists.txt  CMakeLists.txt.in
(+68 files in other folders)
